import "RectangleWire.proto" ;
import "MatrixPieceOwnerWire.proto" ;

option java_package = "it.unipr.aotlab.dmat.core.generated" ;

message OrderAddAssign {
    required string firstAddendumMatrixId = 1;
    required string firstAddendumNodeId = 2;

    required string secondAddendumMatrixId = 3;
    required string secondAddendumNodeId = 4;

    required RectangleBody outputPiece = 5;
}

message OrderAddAssignBody {
    repeated MatrixPieceOwnerBody missingPieces = 1 ;
    repeated OrderAddAssign operation = 2;
}

